[gd_scene load_steps=12 format=3 uid="uid://dsaovvehgewyy"]

[ext_resource type="Script" uid="uid://ccjy1q4ckumut" path="res://objectives/victim_rescue.gd" id="1_0qijs"]
[ext_resource type="Script" uid="uid://cv5l7ogofd6yv" path="res://addons/godot-xr-tools/objects/pickable.gd" id="2_5xjs5"]
[ext_resource type="Script" uid="uid://bs8upadcj5xge" path="res://addons/godot-xr-tools/objects/interactable_area.gd" id="2_q5yrj"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="3_12ehe"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="4_1w5fe"]
[ext_resource type="Resource" uid="uid://c5nxxsga5kesd" path="res://assets/meshes/interactables/pose_grab_ball_left.tres" id="4_5xjs5"]
[ext_resource type="Resource" uid="uid://dvvw0k7tqagx" path="res://assets/meshes/interactables/pose_grab_ball_right.tres" id="6_dshul"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q5yrj"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jailu"]
material = SubResource("StandardMaterial3D_q5yrj")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_12ehe"]

[sub_resource type="SphereShape3D" id="SphereShape3D_5xjs5"]
radius = 1.0

[node name="VictimRescue" type="Node3D"]
script = ExtResource("1_0qijs")
dialogue_states = Array[String](["pre_rescue", "post_rescue"])
objective_name = "Victim"

[node name="RigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
axis_lock_angular_x = true
axis_lock_angular_z = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D"]
mesh = SubResource("CapsuleMesh_jailu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("CapsuleShape3D_12ehe")

[node name="Area3D" type="Area3D" parent="RigidBody3D"]
collision_mask = 524320

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D/Area3D"]
shape = SubResource("SphereShape3D_5xjs5")

[node name="XRToolsPickable" type="RigidBody3D" parent="RigidBody3D"]
collision_layer = 4
collision_mask = 720903
script = ExtResource("2_5xjs5")
release_mode = 1
ranged_grab_method = 0
second_hand_grab = 2
metadata/_custom_type_script = "uid://cv5l7ogofd6yv"

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D/XRToolsPickable"]
shape = SubResource("CapsuleShape3D_12ehe")

[node name="GrabPointHandLeft" parent="RigidBody3D/XRToolsPickable" instance=ExtResource("3_12ehe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.500723, 0, 0)
visible = true
hand_pose = ExtResource("4_5xjs5")

[node name="GrabPointHandRight" parent="RigidBody3D/XRToolsPickable" instance=ExtResource("4_1w5fe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.483038, 0, 0)
visible = true
hand_pose = ExtResource("6_dshul")

[node name="XRToolsInteractableArea" type="Area3D" parent="."]
collision_layer = 1048576
collision_mask = 0
script = ExtResource("2_q5yrj")
metadata/_custom_type_script = "uid://bs8upadcj5xge"

[node name="CollisionShape3D" type="CollisionShape3D" parent="XRToolsInteractableArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_12ehe")

[connection signal="area_entered" from="RigidBody3D/Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="RigidBody3D/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="pointer_event" from="XRToolsInteractableArea" to="." method="_on_xr_tools_interactable_area_pointer_event"]
